// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`webpack-tests > 1. extracts to a div for simple views, flat transforms 1`] = `
<div>
  <span
    class="t_dark _dsp_contents"
  >
    <span
      class=" t_dark is_Theme"
      style="color: var(--color); display: contents;"
    >
      <span
        class="_dsp_contents  font_body"
      >
        <div
          class="is_View _fg-1 _fs-1 _fb-0px _bxsh-0px0px10px0946673987 _fd-1704571336 _bc-1258529411 _tsx-226495231 _s-1252090770 _tsy-66907776 test1"
          rounded="100"
        >
          <span
            class="is_Text _c-84429638"
          >
            hello world
          </span>
        </div>
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</div>
`;

exports[`webpack-tests > 2. extracts className for complex views but keeps other props 1`] = `
<div>
  <span
    class="t_dark _dsp_contents"
  >
    <span
      class=" t_dark is_Theme"
      style="color: var(--color); display: contents;"
    >
      <span
        class="_dsp_contents  font_body"
      >
        <div
          class="is_View _fd-594358300 _ox-304549784 _oy-108036279 who"
        />
        <div
          class="is_View _pt-2px _pb-2px _t--14px _fd-594358300 _bc-252910607 ease-in-out-top"
        >
          <span
            class="is_Text _c-84429638"
          >
            hello world
          </span>
        </div>
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</div>
`;

exports[`webpack-tests > 2. extracts className for complex views but keeps other props 2`] = `
<div>
  <span
    class="t_dark _dsp_contents"
  >
    <span
      class=" t_dark is_Theme"
      style="color: var(--color); display: contents;"
    >
      <span
        class="_dsp_contents  font_body"
      >
        <div
          class="is_View _fd-594358300 _ox-304549784 _oy-108036279 who"
        />
        <div
          class="is_View _pt-2px _pb-2px _t-0px _fd-594358300 _bc-252856985 ease-in-out-top"
        >
          <span
            class="is_Text _c-84429638"
          >
            hello world
          </span>
        </div>
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</div>
`;

exports[`webpack-tests > 5. spread conditional 1`] = `
<div>
  <span
    class="t_dark _dsp_contents"
  >
    <span
      class=" t_dark is_Theme"
      style="color: var(--color); display: contents;"
    >
      <span
        class="_dsp_contents  font_body"
      >
        <div
          class="is_View _fd-1118231439 _ox-304549784 _oy-108036279 _bc-254793670"
        >
          <div
            class="is_View _fd-1118231439 _ox-304549784 _oy-108036279 _bc-254793670 hello-world"
          />
        </div>
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</div>
`;

exports[`webpack-tests > 6. spread ternary 1`] = `
<div>
  <span
    class="t_dark _dsp_contents"
  >
    <span
      class=" t_dark is_Theme"
      style="color: var(--color); display: contents;"
    >
      <span
        class="_dsp_contents  font_body"
      >
        <div
          class="is_View _fd-1118231439 _ox-304549784 _oy-108036279 _bc-254793670"
        >
          <span
            class="is_Text _c-84429638"
          >
            hello world
          </span>
        </div>
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</div>
`;

exports[`webpack-tests > 6. spread ternary 2`] = `
<div>
  <span
    class="t_dark _dsp_contents"
  >
    <span
      class=" t_dark is_Theme"
      style="color: var(--color); display: contents;"
    >
      <span
        class="_dsp_contents  font_body"
      >
        <div
          class="is_View _fd-1118231439 _ox-304549784 _oy-108036279 _bc-408331228"
        >
          <span
            class="is_Text _c-84429638"
          >
            hello world
          </span>
        </div>
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</div>
`;

exports[`webpack-tests > 7. ternary + data-is 1`] = `
<div>
  <span
    class="t_dark _dsp_contents"
  >
    <span
      class=" t_dark is_Theme"
      style="color: var(--color); display: contents;"
    >
      <span
        class="_dsp_contents  font_body"
      >
        <div
          class="is_View _pr-11px _pl-11px _pb-10px _fd-1118231439 _w-1825795104"
          maxw="30%"
          minw="500"
        >
          <div
            class="is_View _w-10px _h-10px _fd-1118231439"
          />
        </div>
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</div>
`;

exports[`webpack-tests > 8. styleExpansions 1`] = `
<div>
  <span
    class="t_dark _dsp_contents"
  >
    <span
      class=" t_dark is_Theme"
      style="color: var(--color); display: contents;"
    >
      <span
        class="_dsp_contents  font_body"
      >
        <div
          class="is_View _t-0px _r-0px _b-0px _l-0px _fd-1704571336 _p-1025630001"
        >
          <div
            class="is_View _fd-1704571336 _bc-1258529411"
          >
            <div
              class="is_View _t-0px _r-0px _b-0px _l-0px _fd-1704571336 _p-1025630001 _bc-781230953"
            />
          </div>
        </div>
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</div>
`;

exports[`webpack-tests > 9. combines with classname 1`] = `
<div>
  <span
    class="t_dark _dsp_contents"
  >
    <span
      class=" t_dark is_Theme"
      style="color: var(--color); display: contents;"
    >
      <span
        class="_dsp_contents  font_body"
      >
        <div
          class="is_View _pt-15px _pb-15px _fd-1704571336 home-top-dish"
        />
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</div>
`;

exports[`webpack-tests > 10. extracts Text 1`] = `
<div>
  <span
    class="t_dark _dsp_contents"
  >
    <span
      class=" t_dark is_Theme"
      style="color: var(--color); display: contents;"
    >
      <span
        class="_dsp_contents  font_body"
      >
        <span
          class="is_Text _fos-10px _c-84429638"
        >
          <span
            class="is_Text _c-84429638"
            select="auto"
          >
            <span
              class="is_Text _fos-15px _c-2092012428 _fw-1061363154"
            >
              hello
            </span>
          </span>
        </span>
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</div>
`;

exports[`webpack-tests > 12. ternary multiple on same key 1`] = `
<div>
  <span
    class="t_dark _dsp_contents"
  >
    <span
      class=" t_dark is_Theme"
      style="color: var(--color); display: contents;"
    >
      <span
        class="_dsp_contents  font_body"
      >
        <div
          class="is_View _o-1 _tr- _fd-1118231439"
        />
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</div>
`;

exports[`webpack-tests > 14. extracts pseudo styles and evaluates constants 1`] = `
<div>
  <span
    class="t_dark _dsp_contents"
  >
    <span
      class=" t_dark is_Theme"
      style="color: var(--color); display: contents;"
    >
      <span
        class="_dsp_contents  font_body"
      >
        <div
          class="is_View _fd-1704571336 _bc-1539382872"
        />
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</div>
`;

exports[`webpack-tests > 15. extracts spacer (complex expansion) 1`] = `
<div>
  <span
    class="t_dark _dsp_contents"
  >
    <span
      class=" t_dark is_Theme"
      style="color: var(--color); display: contents;"
    >
      <span
        class="_dsp_contents  font_body"
      >
        <span
          class="is_Spacer is_View _pe-9676500 _w-1501064364 _h-1284318998 _mw-1793766037 _mh-1618255189"
        />
        <span
          class="is_Spacer is_View _fg-1 _fs-1 _fb-0px _pe-9676500 _w-132829524 _h-2003657770 _mw-1072302197 _mh-529222197"
        />
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</div>
`;

exports[`webpack-tests > 16. deopt when spreading multiple 1`] = `
<div>
  <span
    class="t_dark _dsp_contents"
  >
    <span
      class=" t_dark is_Theme"
      style="color: var(--color); display: contents;"
    >
      <span
        class="_dsp_contents  font_body"
      >
        <div
          class="is_View _fg-1 _fs-1 _fb-0px _fd-1118231439 _bc-408331228"
        />
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</div>
`;

exports[`webpack-tests > 18. extracts flexWrap property 1`] = `
<div>
  <span
    class="t_dark _dsp_contents"
  >
    <span
      class=" t_dark is_Theme"
      style="color: var(--color); display: contents;"
    >
      <span
        class="_dsp_contents  font_body"
      >
        <div
          class="is_View _fw-130277719 _fd-2079149131 _rg-1851141727 _cg-1865365108"
        >
          <span
            class="is_Text _c-84429638"
          >
            hello world
          </span>
        </div>
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</div>
`;

exports[`webpack-tests > 19. extracts flexWrap with conditional 1`] = `
<div>
  <span
    class="t_dark _dsp_contents"
  >
    <span
      class=" t_dark is_Theme"
      style="color: var(--color); display: contents;"
    >
      <span
        class="_dsp_contents  font_body"
      >
        <div
          class="is_View _fw-217513840 _fd-594358300"
          items="center"
          justify="space-between"
        >
          <span
            class="is_Text _c-84429638"
          >
            hello world
          </span>
        </div>
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</div>
`;

exports[`webpack-tests > 19. extracts flexWrap with conditional 2`] = `
<div>
  <span
    class="t_dark _dsp_contents"
  >
    <span
      class=" t_dark is_Theme"
      style="color: var(--color); display: contents;"
    >
      <span
        class="_dsp_contents  font_body"
      >
        <div
          class="is_View _fw-353478159 _fd-594358300"
          items="center"
          justify="space-between"
        >
          <span
            class="is_Text _c-84429638"
          >
            hello world
          </span>
        </div>
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</div>
`;

exports[`webpack-tests > 20. extracts multiple flex properties together 1`] = `
<div>
  <span
    class="t_dark _dsp_contents"
  >
    <span
      class=" t_dark is_Theme"
      style="color: var(--color); display: contents;"
    >
      <span
        class="_dsp_contents  font_body"
      >
        <div
          class="is_View _fg-1 _fs-0 _fd-1704571336 _fw-130277719 _fb-1450890263 _ai-1671536448 _jc-1110456239 _ac-1849766786"
        >
          <span
            class="is_Text _c-84429638"
          >
            hello world
          </span>
        </div>
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</div>
`;

exports[`webpack-tests > 21. complex real-world case - flexWrap with many conditionals and media queries 1`] = `
<div>
  <span
    class="t_dark _dsp_contents"
  >
    <span
      class=" t_dark is_Theme"
      style="color: var(--color); display: contents;"
    >
      <span
        class="_dsp_contents  font_body"
      >
        <div
          class="is_View _pt-4px _pb-4px _w-260px _fd-1118231439 _fb-650974837 _ox-304549784 _oy-108036279 _pl-2116217944 _pr-382307868 _bc-1839520590 _c-516573329"
          maxw="100%"
          rounded="8"
        >
          <div
            class="is_View _gap-4px _fd-594358300 _fw-217513840"
            justify="flex-start"
          >
            <span
              class="is_Text _c-84429638"
            >
              hello world
            </span>
          </div>
        </div>
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</div>
`;

exports[`webpack-tests > 21. complex real-world case - flexWrap with many conditionals and media queries 2`] = `
<div>
  <span
    class="t_dark _dsp_contents"
  >
    <span
      class=" t_dark is_Theme"
      style="color: var(--color); display: contents;"
    >
      <span
        class="_dsp_contents  font_body"
      >
        <div
          class="is_View _pt-4px _pb-4px _w-260px _fd-1118231439 _fb-652473296 _ox-304549784 _oy-108036279 _pl-2116217944 _pr-382307868 _bc-1839520590 _c-516573329"
          maxw="100%"
          rounded="8"
        >
          <div
            class="is_View _gap-4px _fd-594358300 _fw-217513840"
            justify="center"
          >
            <span
              class="is_Text _c-84429638"
            >
              hello world
            </span>
          </div>
        </div>
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</div>
`;

exports[`webpack-tests > 22. flexWrap with media query conditionals 1`] = `
<div>
  <span
    class="t_dark _dsp_contents"
  >
    <span
      class=" t_dark is_Theme"
      style="color: var(--color); display: contents;"
    >
      <span
        class="_dsp_contents  font_body"
      >
        <div
          class="is_View _fw-257541956 _fd-1118231439 _rg-1831263032 _cg-1366081005 _pt-1564539890 _pr-967491891 _pb-228431629 _pl-1719339993"
        >
          <span
            class="is_Text _c-84429638"
          >
            hello world
          </span>
        </div>
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</div>
`;

exports[`webpack-tests > 23. inert animatedBy selector flattens with group styles 1`] = `
<div>
  <span
    class="t_dark _dsp_contents"
  >
    <span
      class=" t_dark is_Theme"
      style="color: var(--color); display: contents;"
    >
      <span
        class="_dsp_contents  font_body"
      >
        <div
          class="is_View t_group_animated _fd-1704571336"
          data-testid="animated-group"
        >
          <div
            class="is_View _w-100px _fd-1704571336 _bc-1763037172"
            data-testid="animated-group-child"
          />
        </div>
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</div>
`;
